reduce scope to ccb foler

--- a/.github/workflows/prospector.yml
+++ b/.github/workflows/prospector.yml
@@ -20,4 +20,4 @@ jobs:
         python -m pip install .
         python -m pip install --upgrade prospector[with_mypy] prospector[with_vulture] types-requests types-python-dateutil types-PyYAML types-setuptools mypy vulture
     - name: Analysing the code with prospector
-      run: prospector  --with-tool vulture  --with-tool mypy --strictness veryhigh --max-line-length 200
+      run: prospector  --with-tool vulture  --with-tool mypy --strictness veryhigh --max-line-length 200 ccb
