--- a/.github/workflows/pyre.yml
+++ b/.github/workflows/pyre.yml
@@ -42,12 +42,12 @@ jobs:
         with:
           python-version: '>=3.6'
 
-      - name: Install Pyre
-        run: pip install pyre-check
+      - name: Install dependencies
+        run: pip install .
         shell: bash
 
-      - name: Install dependencies
-        run: python3 -m pip install .
+      - name: Install Pyre
+        run: pip install --upgrade pyre-check
         shell: bash
 
       - name: Set up Pyre
