--- a/.github/workflows/update_status.yml
+++ b/.github/workflows/update_status.yml
@@ -15,6 +15,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.issue_github_token }}
   CONAN_SYSREQUIRES_MODE: enabled
   PYTHONUNBUFFERED: 1
+  NOT_ON_C3I: 1
 
 jobs:
   update_status:
