--- a/.github/workflows/update_status.yml
+++ b/.github/workflows/update_status.yml
@@ -48,14 +48,13 @@ jobs:
 
       - name: Install and configure conan
         run: |
-          python3 -m pip install "conan<2"
-          conan config install https://github.com/conan-io/hooks.git -sf hooks -tf hooks
-          conan config set hooks.conan-center
-          conan profile new default --detect
-          conan profile update settings.compiler.libcxx=libstdc++11 default
-          conan profile update conf.tools.system.package_manager:mode=install default
-          conan profile update conf.tools.system.package_manager:sudo=True default
-          conan profile show default
+          python3 -m pip install "conan>=2"
+          conan profile detect -f
+          profile_path=$(conan profile path default)
+          echo "[conf]" >> $profile_path
+          echo "tools.system.package_manager:mode=install" >> $profile_path
+          echo "tools.system.package_manager:sudo=True" >> $profile_path
+          conan profile show
 
       - name: Checkout
         uses: actions/checkout@v4
